src/objects/Color_for_orders__c.object
<CustomObject>
    <description>join for line items to color</description>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Competitor_Color__r.Color_Brand__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Color__c</fullName>
        <label>Competitor Color</label>
        <referenceTo>Competitor_Color__c</referenceTo>
        <relationshipName>Color_for_orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipName>Color_for_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Color For Orders</label>
    <nameField>
        <label>Color for orders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Color For Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>